--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,6 +17,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -47,4 +51,14 @@ a {
       display: flex;
     }
   }
+}
+
+.bg-linear {
+  background: linear-gradient(
+    0deg,
+    rgba(241, 246, 253, 0) 1.63%,
+    #f1f6fd 20.5%,
+    #f1f6fd 58.57%,
+    #ffffff 100%
+  );
 }
