--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -9,6 +9,11 @@
   font-size: 2.25rem;
   line-height: 3rem;
 }
+.h3 {
+  font-weight: 600;
+  font-size: 1.5rem;
+  line-height: 1.625rem;
+}
 .p {
   color: #656464;
   font-size: 1rem;
